all three blogs

--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/Tree-Plantation.jpg');">
+              <a href="tree-planting-blog.html" class="block-20" style="background-image: url('images/Tree-Plantation.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -85,7 +85,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/Women\'s-Day.jpg');">
+              <a href="women-empowerment-blog.html" class="block-20" style="background-image: url('images/Women\'s-Day.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
