--- a/tree-planting-blog.html
+++ b/tree-planting-blog.html
@@ -31,7 +31,7 @@
     
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Welfare</a>
+      <a class="navbar-brand" href="index.html"><img src="images/Suvidha_logo.png" alt="Suvidha_logo" style="height: 50px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
       </button>
@@ -305,11 +305,11 @@
           <div class="col-md-3">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About Us</h2>
-              <p>We are dedicated to environmental restoration and sustainability through community-driven initiatives, education programs, and creating platforms that empower citizens to take meaningful action for our planet's future.</p>
+              <p>Working Towards a Better World for Everyone.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li> -->
+                <li class="ftco-animate"><a href="https://www.instagram.com/suvidhafoundationau/?igsh=Y29xcWZveDF2emR6#"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -317,24 +317,24 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Recent Blog</h2>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url(images/Tree-Plantation.jpg);"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="#">Urban Farming Initiative Transforms Thane's Rooftops Into Food Gardens</a></h3>
+                  <h3 class="heading"><a href="tree-planting-blog.html">Suvidha's tree planting event was a triumph! We united to nurture the Earth.</a></h3>
                   <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> April 14, 2025</a></div>
+                    <div><a href="#"><span class="icon-calendar"></span> July 12, 2018</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 13</a></div>
+                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
                   </div>
                 </div>
               </div>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url(images/Women\'s-Day.jpg);"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="#">Community-Led Plastic Cleanup Removes Two Tons From Thane Creek</a></h3>
+                  <h3 class="heading"><a href="women-empowerment-blog.html">The atmosphere in Thane was vibrant as we celebrated Women's Day, wholeheartedly acknowledging the strength, resilience, and remarkable achievements of women globally.</a></h3>
                   <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> April 11, 2025</a></div>
+                    <div><a href="#"><span class="icon-calendar"></span> July 12, 2018</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 8</a></div>
+                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
                   </div>
                 </div>
               </div>
@@ -355,12 +355,22 @@
           </div>
           <div class="col-md-3">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Contact Information</h2>
+            	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">123 Green Earth Road, Thane West, Maharashtra 400601, India</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 98765 43210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">connect@suvidhafoundation.org</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Office Headquarters -
+                    <br> <br>
+                    Nagpur Headquarter:
+                    <br>
+                    Suvidha Foundation, Motghare Bhavan, Ward No. 4, Santnagar, Annamod, Near Water Tank, Khaperkheda, Saoner, Nagpur, Maharashtra, India Pincode - 441102
+                    <br> <br>
+                    Hyderabad Headquarter:
+                    <br>
+                    Vazhra Nirman Pushpak, C Block 701, 500090, Hyderabad</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 8090706050</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">
+                    suvidhashiksha@gmail.com
+                    </span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -369,8 +379,9 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+  &copy;<script>document.write(new Date().getFullYear());</script>  Suvidha Foundation (Suvidha Mahila Mandal), All Right Reserved
+  By Suvidha Foundation
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
